Change and fixed general styles and customize Boorkmarks page.

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!--<ion-header>
     <ion-toolbar>
         <ion-grid>
             <ion-row>
@@ -16,11 +16,60 @@
         </ion-grid>
 
     </ion-toolbar>
+</ion-header>-->
+
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-grid>
+            <ion-row>
+                <ion-col float-left size="5">
+                    <div class="pb-title-text">Nombre Libro</div>
+                </ion-col>
+                <ion-col float-right text-right>
+                    <ion-grid>
+                        <ion-row>
+                            <ion-col>
+                                <ion-button routerLink="/library" class="pb-button">
+                                    <img src="assets/images/icon_home.svg">
+                                </ion-button>
+                            </ion-col>
+                            <ion-col>
+                                <ion-button (click)="openCustom('search')" class="pb-button">
+                                    <img src="assets/images/icon_search.svg">
+                                </ion-button>
+                            </ion-col>
+                            <ion-col>
+                                <ion-button (click)="presentStylesPopOver()" class="pb-button">
+                                    <img src="assets/images/icon_letter.svg">
+                                </ion-button>
+                            </ion-col>
+                            <ion-col>
+                                <ion-button (click)="openCustom('storage-content')" class="pb-button">
+                                    <img src="assets/images/icon_more.svg">
+                                </ion-button>
+                            </ion-col>
+                            <ion-col>
+                                <ion-button (click)="bookMarkPage()" class="pb-button">
+                                    <img src="assets/images/icon_bookmark.svg">
+                                </ion-button>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+        <ion-buttons slot="end">
+
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-    <ion-card *ngFor="let bookmark of bookMarks; let i = index">
+    <!--<ion-card *ngFor="let bookmark of bookMarks; let i = index">
         <ion-card-header>
             <ion-grid>
                 <ion-row>
@@ -39,6 +88,32 @@
         <ion-card-content>
             <p (click)="goToPage(bookmark.pageIndex)">Ir a Pagina {{bookmark.pageIndex}}</p>
         </ion-card-content>
-    </ion-card>
+    </ion-card>-->
+
+    <ion-grid class="pb-top-bar">
+        <ion-row>
+            <ion-col text-center>
+                <a class="pb-title-text active">MARCADORES</a>
+                <a class="pb-title-line">|</a>
+                <a class="pb-title-text">NOTAS</a>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <ion-grid class="pb-results">
+        <ion-row>
+            <ion-col>
+                <ion-list>
+                    <ion-item>
+                        <ion-label>
+                            <p><span class="pb-text-1">GENESIS (GEN)</span></p>
+                            <p><span class="pb-text-2">Capítulo 1</span></p>
+                            <p><span class="pb-text-3">Texto</span></p>
+                        </ion-label>
+                        <a href="" class="pb-link">BORRAR</a>
+                    </ion-item>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
 </ion-content>
