--- a/src/app/slide/slide.page.html
+++ b/src/app/slide/slide.page.html
@@ -3,8 +3,12 @@
     <img src="../../assets/images/slide1.jpg">
   </div>
 
-  <div [@simpleFadeAnimation]="'change2'" class="background-slider" *ngIf="class2">
+  <!--<div [@simpleFadeAnimation]="'change2'" class="background-slider" *ngIf="class2">
     <img src="../../assets/images/slide2.jpg">
+  </div>-->
+
+  <div [@simpleFadeAnimation]="'change2'" class="background-slider special" *ngIf="class2">
+    <img src="../../assets/images/slide4.png">
   </div>
 
   <div [@simpleFadeAnimation]="'change3'" class="background-slider" *ngIf="class3">
