--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,8 +26,13 @@
                                     <img src="assets/images/icon_letter.svg">
                                 </ion-button>
                             </ion-col>
+                            <!--<ion-col>-->
+                                <!--<ion-button routerLink="/bookmarks" class="pb-button">-->
+                                    <!--<img src="assets/images/icon_more.svg">-->
+                                <!--</ion-button>-->
+                            <!--</ion-col>-->
                             <ion-col>
-                                <ion-button (click)="openCustom('storage-content')" class="pb-button">
+                                <ion-button (click)="presentPersistence()" class="pb-button">
                                     <img src="assets/images/icon_more.svg">
                                 </ion-button>
                             </ion-col>
