--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -77,6 +77,7 @@
 
   /** PadBook **/
   --ion-color-pb-blue-1: /*#01184a*/ #2c0d40;
+  --ion-color-pb-blue-1-opacity: /*rgba(1, 24, 74, 0.9)*/ rgba(44, 13, 64, 0.9);
   --ion-color-pb-blue-2: /*#00ffff*/ #ffc105;
   --ion-color-pb-background: #f2f2f2;
   --ion-color-pb-border: #cccccc;
