--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -97,8 +97,8 @@
             </ion-menu-toggle>
             <ion-menu-toggle auto-hide="false" *ngIf="showNotes">
                 <ion-list>
-                    <ion-item *ngFor="let result of notes">
-                        <p (click)="goToPageFromCfi(result.cfi)">{{result.excerpt}}</p>
+                    <ion-item *ngFor="let result of notes" (click)="goToPageFromCfi(result.cfi)">
+                        <p>{{result.excerpt}}</p>
                     </ion-item>
                 </ion-list>
             </ion-menu-toggle>
@@ -106,8 +106,8 @@
     </ion-menu>
     <ion-router-outlet id="storage-content"></ion-router-outlet>
     <ion-router-outlet id="main-search"></ion-router-outlet>
-    <!--<div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" (click)="showHeader()"></div>-->
     <div id="area"></div>
+    <!--<div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" (click)="showHeader()"></div>-->
 </ion-content>
 
 <ion-footer align-items-center *ngIf="showElement">
