--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -59,8 +59,8 @@
                 <ion-searchbar (ionChange)="searchBook($event)" style="color: white"></ion-searchbar>
                 <ion-menu-toggle auto-hide="false">
                     <ion-list>
-                        <ion-item *ngFor="let result of searchResults">
-                            <p (click)="goToPageFromCfi(result.cfi)">{{result.excerpt}}</p>
+                        <ion-item *ngFor="let result of searchResults" (click)="goToPageFromCfi(result.cfi)">
+                            <p>{{result.excerpt}}</p>
                         </ion-item>
                     </ion-list>
                 </ion-menu-toggle>
