Fixed general styles.

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -126,8 +126,8 @@
                             <p><span class="pb-text-3">{{note.text_selected}}</span></p>
                             <p><span class="pb-text-3">{{note.note}}</span></p>
                         </ion-label>
-                        <a (click)="editNote(note)" class="pb-link">Editar</a>
-                        <a (click)="deleteNote(note)" class="pb-link">BORRAR</a>
+                        <a (click)="editNote(note)" class="pb-link"><ion-icon name="create-outline"></ion-icon></a>
+                        <a (click)="deleteNote(note)" class="pb-link"><ion-icon name="trash-outline"></ion-icon></a>
                     </ion-item>
                 </ion-list>
             </ion-col>
