--- a/src/app/home/create-note-modal/create-note-modal.page.html
+++ b/src/app/home/create-note-modal/create-note-modal.page.html
@@ -11,7 +11,7 @@
         <ion-row>
             <ion-col text-center>
                 <p>Selección</p>
-                <ion-item style="background: white">
+                <ion-item style="background: white" class="pb-tall">
                     {{textSelected}}
                 </ion-item>
             </ion-col>
