--- a/src/app/home/edit-note-modal/edit-note-modal.page.html
+++ b/src/app/home/edit-note-modal/edit-note-modal.page.html
@@ -1,14 +1,13 @@
 <!--<ion-header>
     <a (click)="dismissModal()">Cerrar</a>
 </ion-header>-->
-<ion-content class="popover">
+<ion-content class="popover pb-special">
     <ion-grid>
         <ion-row>
             <ion-col text-right>
                 <ion-button (click)="editNote()" class="pb-simple pb-border">Editar Nota</ion-button>
             </ion-col>
         </ion-row>
-        <hr>
         <ion-row>
             <ion-col text-center>
                 <p>Nota</p>
