--- a/src/app/home/popovers/highlight-delete-popover/highlight-delete-pop.html
+++ b/src/app/home/popovers/highlight-delete-popover/highlight-delete-pop.html
@@ -2,6 +2,7 @@
     <ion-grid>
         <ion-row>
             <ion-col text-center>
+            	<a (click)="deleteHighLight()"><img src="assets/images/icon_delete.svg"></a>
                 <ion-button (click)="deleteHighLight()" class="pb-simple">Borrar</ion-button>
             </ion-col>
         </ion-row>
