--- a/src/app/slide/slide.page.html
+++ b/src/app/slide/slide.page.html
@@ -7,7 +7,7 @@
     <img src="../../assets/images/slide2.jpg">
   </div>-->
 
-  <div [@simpleFadeAnimation]="'change2'" class="background-slider special" *ngIf="class2">
+  <div [@simpleFadeAnimation]="'change2'" class="background-slider pb-special" *ngIf="class2">
     <img src="../../assets/images/slide4.png">
   </div>
 
