--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,23 +1,3 @@
-<!--<ion-header>
-    <ion-toolbar>
-        <ion-grid>
-            <ion-row>
-                <ion-col>
-                    <ion-title padding-top="16px" class="pb-title">
-                        <span class="pb-text-1">Marcadores</span>
-                    </ion-title>
-                </ion-col>
-                <ion-col>
-                    <ion-button [size]="small" routerLink="/home" float-right>
-                        <ion-icon name="home"></ion-icon>
-                    </ion-button>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-
-    </ion-toolbar>
-</ion-header>-->
-
 <!--<ion-header>-->
     <!--<ion-toolbar>-->
         <!--<ion-buttons slot="start">-->
@@ -65,9 +45,18 @@
 
         <!--</ion-buttons>-->
     <!--</ion-toolbar>-->
-<!--</ion-header>-->
 
 <ion-content>
+
+    <ion-grid class="pb-top-bar">
+        <ion-row>
+            <ion-col text-center>
+                <a class="pb-title-text" [ngClass]="{'active' : showBookMarks}" (click)="changeOption()">MARCADORES</a>
+                <a class="pb-title-line">|</a>
+                <a class="pb-title-text" [ngClass]="{'active' : showNotes}"(click)="changeOption()">NOTAS</a>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
     <!--<ion-card *ngFor="let bookmark of bookMarks; let i = index">
         <ion-card-header>
@@ -89,16 +78,6 @@
             <p (click)="goToPage(bookmark.pageIndex)">Ir a Pagina {{bookmark.pageIndex}}</p>
         </ion-card-content>
     </ion-card>-->
-
-    <ion-grid class="pb-top-bar">
-        <ion-row>
-            <ion-col text-center>
-                <a class="pb-title-text" [ngClass]="{'active' : showBookMarks}" (click)="changeOption()">MARCADORES</a>
-                <a class="pb-title-line">|</a>
-                <a class="pb-title-text" [ngClass]="{'active' : showNotes}"(click)="changeOption()">NOTAS</a>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
     <ion-grid class="pb-results" *ngIf="showBookMarks">
         <ion-row>
             <ion-col>
@@ -109,7 +88,7 @@
                             <p><span class="pb-text-2">P&aacute;gina {{bookmark.book_page}} </span></p>
                             <p><span class="pb-text-3">Marcador #{{i}}</span></p>
                         </ion-label>
-                        <a (click)="deleteBookMark(bookmark)" class="pb-link">BORRAR</a>
+                        <a (click)="deleteBookMark(bookmark)" class="pb-link"><ion-icon md="md-trash"></ion-icon></a>
                     </ion-item>
                 </ion-list>
             </ion-col>
@@ -126,8 +105,8 @@
                             <p><span class="pb-text-3">{{note.text_selected}}</span></p>
                             <p><span class="pb-text-3">{{note.note}}</span></p>
                         </ion-label>
-                        <a (click)="editNote(note)" class="pb-link"><ion-icon name="create-outline"></ion-icon></a>
-                        <a (click)="deleteNote(note)" class="pb-link"><ion-icon name="trash-outline"></ion-icon></a>
+                        <a (click)="editNote(note)" class="pb-link"><ion-icon md="md-paper"></ion-icon></a>
+                        <a (click)="deleteNote(note)" class="pb-link"><ion-icon md="md-trash"></ion-icon></a>
                     </ion-item>
                 </ion-list>
             </ion-col>
