Actualiza imagenes de intro

--- a/src/app/home/create-note-modal/create-note-modal.page.html
+++ b/src/app/home/create-note-modal/create-note-modal.page.html
@@ -13,7 +13,7 @@
         <ion-row>
             <ion-col text-center>
                 <ion-item>
-                    <ion-textarea [(ngModel)]="noteText"></ion-textarea>
+                    <ion-textarea [(ngModel)]="noteText" placeholder="Empieza a escribir aquí"></ion-textarea>
                 </ion-item>
             </ion-col>
         </ion-row>
